# chocolatey-packages

./: .gitignore  LICENSE  readme.md
Icaros/Icaros/: Icaros.nuspec
Icaros/Icaros.install/: Icaros.install.nuspec
Icaros/Icaros.install/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
Icaros/Icaros.portable/: Icaros.portable.nuspec
Icaros/Icaros.portable/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
Icaros/Icaros/tools/: chocolateyInstall.ps1
VS2013.PowerTools/: VS2013.PowerTools.nuspec
VS2013.PowerTools/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
VS2013.VSCommands/: VS2013.VSCommands.nuspec
VS2013.VSCommands/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
_templates/vsix2013/: __NAME__.nuspec
_templates/vsix2013/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
icaros/: pyproject.toml  update.py
icaros/beta/: icaros.nuspec
icaros/beta/tools/: chocolateyInstall.ps1
icaros/stable/: icaros.nuspec
icaros/stable/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
ps-fileassociation/chocolatey/: ps-fileassociation.nuspec
ps-fileassociation/chocolatey/tools/: chocolateyInstall.ps1
ps-fileassociation/scripts/: Register-FileAssociation.ps1  Unregister-FileAssociation.ps1
