[tool.poetry]
name = "icaros-pkg-updater"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.22"
beautifulsoup4 = "^4.7"
lxml = "^4.3"
semantic_version = "^2.6"

[tool.poetry.dev-dependencies]
ipython = "^7.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
