[tool.poetry]
name = "icaros-pkg-updater"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31"
beautifulsoup4 = "^4.12"
lxml = "^4.9"
semantic_version = "^2.10"

[tool.poetry.dev-dependencies]
ipython = "^8.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
